Attempted fix for mobile distortion problem

--- a/gallery/static/styles.scss
+++ b/gallery/static/styles.scss
@@ -193,7 +193,7 @@ footer {
         }
 
         .modal {
-            width: 95%;
+            max-width: 95%;
             top: 50% !important;
             transform: translateY(-50%) !important;
         }
